# sportmaster-card-agent

./: .gitignore  README.md  agent_mode_check.txt  demo_output.txt  enrichment_check.txt  enrichment_v2.txt  llm_competitors.txt  parallel_output.txt  pyproject.toml  seo_test_result.txt  smoke_output.txt  torneo_llm.txt  torneo_llm2.txt  torneo_result.txt  wb_crawl.txt  wb_crawl_parsed.txt  wb_crawl_result.txt  wb_full_md.txt
docs/: architecture-demo.html
docs/architecture/: phase1-pipeline.md
docs/superpowers/plans/: 2026-03-23-phase1-pilot-pipeline.md  2026-03-23-phase2-full-uc1-uc2.md  2026-03-23-phase25-llm-integration.md
scripts/: smoke_test.py
src/sportmaster_card/: __init__.py
src/sportmaster_card/agents/: __init__.py  base.py  brand_compliance.py  content_generator.py  (+14 more)
tests/: conftest.py  test_llm_config.py
tests/agents/: test_base.py  test_brand_compliance.py  test_content_generator.py  test_copy_editor.py  test_crew_mode.py  test_data_curator.py  test_data_enricher.py  test_data_validator.py  test_external_researcher.py  test_fact_checker.py  test_internal_researcher.py  test_quality_controller.py  test_router.py  test_seo_analyst.py  test_structure_planner.py  test_synectics_agent.py  test_visual_interpreter.py
tests/flows/: test_crew_flow.py  test_parallel_flow.py  test_pilot_flow.py
tests/integration/: test_full_pipeline.py
tests/models/: test_content.py  test_enrichment.py  test_platform_profile.py  test_product_input.py  test_provenance.py  test_routing.py
tests/tools/: test_excel_parser.py  test_ozon_search.py  test_wb_search.py
(+38 files in other folders)
